<resources>
    <string name="app_name">News App</string>
    <string name="my_news">My News</string>
    <string name="popular_news">Popular News</string>
    <string name="search">Search</string>
    <string name="search_query">Enter a search query</string>
    <string name="description">Description</string>
    <string name="visit_site">Visit site</string>
    <string name="favorites_title">Favourites</string>
    <string name="successfully_deleted">Successfully deleted article</string>
    <string name="successfully_add">Successfully add article</string>
    <string name="undo">Undo</string>
    <string name="region_popular_news">us</string>
    <string name="send_article">Send article</string>
    <string name="no_internet">No Internet, check connection.</string>
    <string name="over_99" translatable="false">99+</string>
    <string name="data_pattern">mm.dd.yyyy HH:mm</string>
    <string name="no_browser">Don\'t have any browser</string>
    <string name="empty_url" translatable="false">https://google.com</string>
    <string name="no_favourites">No favourites yet</string>
    <string name="no_favourites2">Make sure you have \n added event’s in this section</string>
    <string name="add_favorites">Add favourites</string>
    <string name="enter_query">Enter a query</string>
    <string name="check_your_connection_and_try_again">Check your connection and try again!</string>
</resources>